--- a/public/index.html
+++ b/public/index.html
@@ -22,7 +22,7 @@
     <link href='https://fonts.googleapis.com/css?family=Source+Sans+Pro:400,600,700,300' rel='stylesheet' type='text/css'>
     <link rel='stylesheet prefetch' href='https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.6.2/css/font-awesome.min.css'>
     <!-- custom css  -->
-    <link rel="stylesheet" href="./css/body.css">
+    <!-- <link rel="stylesheet" href="./css/body.css"> -->
 
     
 
@@ -45,16 +45,16 @@
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
     <!-- including query string  -->
-    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/qs/6.9.1/qs.min.js"></script>
+    <!-- <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/qs/6.9.1/qs.min.js"></script> -->
     <!-- including toastr files -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/toastr.js/latest/js/toastr.min.js" ></script>
     <!-- including moment.js -->
-    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.18.1/moment.min.js"></script>
+    <!-- <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.18.1/moment.min.js"></script> -->
 
     <!-- including file for geolocation scripting --> 
     <!-- <script type="text/javascript" src="./js/geolocation.js"></script>-->
     <script src="./js/pen.js"> </script>
-    <script src="./js/chat.js"> </script>
-    <script src="./js/util.js"></script> 
+    <!-- <script src="./js/chat.js"> </script> -->
+    <!-- <script src="./js/util.js"></script>  -->
   </body>
 </html>
