fixes and completed all remaining basic changes

--- a/public/index.html
+++ b/public/index.html
@@ -54,7 +54,8 @@
     <!-- including file for geolocation scripting --> 
     <!-- <script type="text/javascript" src="./js/geolocation.js"></script>-->
     <script src="./js/pen.js"> </script>
-    <!-- <script src="./js/chat.js"> </script> -->
-    <!-- <script src="./js/util.js"></script>  -->
+    <!-- font awesome -->
+    <script src="https://kit.fontawesome.com/5d44695dbc.js" crossorigin="anonymous"></script>
+
   </body>
 </html>
